# pod-stress

./: .env.example  Cargo.toml  Dockerfile  build-and-deploy.sh  need.txt  user_data.sh
experiment-data/: result.txt
src/: main.rs
