[package]
name = "stress-test-devnet"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
alloy = { version = "0.12.6", features = ["full"] }
eyre = "0.6.12"
tokio = { version = "1.44.1", features = ["full"] }
hex = "0.4.3"
serde = "1.0.219"
serde_json = "1.0.140"
rand = "0.8.5"
alloy-signer = "0.9.2"
aws-config = "1.1"
aws-sdk-ec2 = "1.17"
base64 = "0.21"
rustls = { version = "0.23.25", features = ["ring"] }


[[bin]]
name = "stress"
path = "src/bin/stress.rs"

[[bin]]
name = "deploy"
path = "src/bin/deploy.rs"